# xcore

./: .gitignore  CMakeLists.txt  README.md  project.yml  run-ceedling-env.cmd
include/ecore/: api.h  bits.h  circularbuffer.h  crc32.h  log.h  softtimer.h  waitcounter.h
include/ecore/drivers/: adc.h  battery.h  flash.h  gpio.h  hw.h  i2c.h  i2s.h  iointerface.h  perfcounter.h  power.h  pwm.h  reset.h  rtc.h  sdio.h  spi.h  timer.h  tsensor.h  uart.h  watchdog.h
samples/: CMakeLists.txt
src/: CMakeLists.txt  circularbuffer.c  crc32.c  log.c  softtimer.c  waitcounter.c
test/: CMakeLists.txt  b_test_flash.c  b_test_uart.c  test_circularbuffer.c  test_softtimer.c  test_waitcounter.c  testrunner.c
